<resources>
    <string name="app_name">Lab1UI</string>
    <string name="txtNombres">Nombres:</string>
    <string name="txtApellidos">Apellidos:</string>
    <string name="txtSexo">Sexo:</string>
    <string name="txtHombre">Masculino</string>
    <string name="txtMujer">Femenino</string>
    <string name="txtFecha">Fecha de Nacimiento:</string>
    <string name="txtPais">Pais:</string>
    <string name="txtTelefono">Telefono:</string>
    <string name="txtDireccion">Direccion:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtHobbies">Hobbies:</string>
    <string name="txtFavorito">Favorito:</string>
    <string name="txtFavoritoSi">Si</string>
    <string name="txtFavoritoNo">No</string>
    <string name="defaultDate">click para asignar..</string>
    <string name="btnMostrar">Mostrar</string>
<<<<<<< HEAD

=======
>>>>>>> 31a1cab604d58f252ef18384750f2ba6668dc196
    <string-array name="hobbies_array">
        <item>Jugar Futbol</item>
        <item>Tocar Guitarra</item>
        <item>Ver Television</item>
        <item>Estudiar</item>
        <item>Dormir una siesta</item>
        <item>Comer postres</item>
        <item>JUgar Videojuegos</item>
        <item>Otro</item>
    </string-array>

<<<<<<< HEAD
    <string name="pais">Pais</string>
    <string-array name="countries">
    <item> Afghanistan </item>
    <item> Albania </item>
    <item> Germany </item>
    <item> Andorra </item>
    <item> Angola </item>
    <item> Antigua and Barbuda </item>
    <item> Saudi Arabia </item>
    <item> Algeria </item>
    <item> Argentina </item>
    <item> Armenia </item>
    <item> Australia </item>
    <item> Austria </item>
    <item> Azerbaijan </item>
    <item> Bahamas </item>
    <item> Bangladesh </item>
    <item> Barbados </item>
    <item> Baréin </item>
    <item> Belgium </item>
    <item> Belize </item>
    <item> Benin </item>
    <item> Belarus </item>
    <item> Burma </item>
    <item> Bolivia </item>
    <item> Bosnia and Herzegovina </item>
    <item> Botswana </item>
    <item> Brazil </item>
    <item> Brunei Darussalam </item>
    <item> Bulgaria </item>
    <item> Burkina Faso </item>
    <item> Burundi </item>
    <item> Bhutan </item>
    <item> Cape Verde </item>
    <item> Cambodia </item>
    <item> Cameroon </item>
    <item> Canada </item>
    <item> Catar </item>
    <item> Chad </item>
    <item> Chile </item>
    <item> China </item>
    <item> Cyprus </item>
    <item> Vatican City </item>
    <item> Colombia </item>
    <item> Comoros </item>
    <item> North Korea </item>
    <item> South Korea </item>
    <item> Ivory Coast </item>
    <item> Costa Rica </item>
    <item> Croatia </item>
    <item> Cuba </item>
    <item> Denmark </item>
    <item> Dominica </item>
    <item> Ecuador </item>
    <item> Egypt </item>
    <item> El Salvador </item>
    <item> UAE </item>
    <item> Eritrea </item>
    <item> Slovakia </item>
    <item> Slovenia </item>
    <item> Spain </item>
    <item> United States </item>
    <item> Estonia </item>
    <item> Ethiopia </item>
    <item> Philippines </item>
    <item> Finland </item>
    <item> Fiji </item>
    <item> France </item>
    <item> Gabon </item>
    <item> Gambia </item>
    <item> Georgia </item>
    <item> Ghana </item>
    <item> Granada </item>
    <item> Greece </item>
    <item> Guatemala </item>
    <item> Guyana </item>
    <item> Guinea </item>
    <item> equatorial Guinea </item>
    <item> Guinea-Bissau </item>
    <item> Haiti </item>
    <item> Honduras </item>
    <item> Hungary </item>
    <item> India </item>
    <item> Indonesia </item>
    <item> Iraq </item>
    <item> Iran </item>
    <item> Ireland </item>
    <item> Iceland </item>
    <item> Marshall Islands </item>
    <item> Solomon Islands </item>
    <item> Israel </item>
    <item> Italy </item>
    <item> Jamaica </item>
    <item> Japan </item>
    <item> Jordan </item>
    <item> Kazakhstan </item>
    <item> Kenya </item>
    <item> Kyrgyzstan </item>
    <item> Kiribati </item >
    <item> Kuwait </item>
    <item> Laos </item>
    <item> Lesotho </item>
    <item> Latvia </item>
    <item> Lebanon </item>
    <item> Liberia </item>
    <item> Libya </item>
    <item> Liechtenstein </item>
    <item> Lithuania </item>
    <item> Luxembourg </item>
    <item> Madagascar </item>
    <item> Malaysia </item>
    <item> Malawi </item>
    <item> Maldives </item>
    <item> Mali </item>
    <item> Malta </item>
    <item> Morocco </item>
    <item> Mauritius </item>
    <item> Mauritania </item>
    <item> Mexico </item>
    <item> Micronesia </item>
    <item> Moldova </item>
    <item> Monaco </item>
    <item> Mongolia </item>
    <item> Montenegro </item >
    <item> Mozambique </item>
    <item> Namibia </item>
    <item> Nauru </item>
    <item> Nepal </item>
    <item> Nicaragua </item>
    <item> Niger </item>
    <item> Nigeria </item>
    <item> Norway </item>
    <item> New Zealand </item>
    <item> Oman </item>
    <item> Netherlands </item>
    <item> Pakistan </item>
    <item> Palau </item>
    <item> Panama </item>
    <item> Papua New Guinea </item>
    <item> Paraguay </item>
    <item> Peru </item>
    <item> Poland </item>
    <item> Portugal </item>
    <item> UK </item>
    <item> Central African Republic </item>
    <item> Czech Republic </item>
    <item> Republic of Macedonia </item>
    <item> Republic of Congo </item>
    <item> Democratic Republic of Congo </item>
    <item> Dominican </item>
    <item> South </item>
    <item> Rwanda </item>
    <item> Romania </item>
    <item> Russia </item>
    <item> Samoa </item>
    <item> Saint Kitts and Nevis </item>
    <item> San Marino </item>
    <item> Saint Vincent and the Grenadines </item>
    <item> Saint Lucia </item>
    <item> Sao Tome and Principe </item>
    <item> Senegal </item>
    <item> Serbia </item>
    <item> Seychelles </item>
    <item> Sierra Leone </item>
    <item> Singapore </item>
    <item> Syria </item>
    <item> Somalia </item>
    <item> Sri Lanka </item>
    <item> Swaziland </item>
    <item> Sudan </item>
    <item> South Sudan </item>
    <item> Sweden </item>
    <item> Switzerland </item>
    <item> Suriname </item>
    <item> Thailand </item>
    <item> Tanzania </item>
    <item> Tajikistan </item>
    <item> East Timor </item>
    <item> Togo </item>
    <item> Tonga </item>
    <item> Trinidad and Tobago </item>
    <item> Tunisia </item>
    <item> Turkmenistan </item>
    <item> Turkey </item>
    <item> Tuvalu </item>
    <item> Ukraine </item>
    <item> Uganda </item>
    <item> Uruguay </item>
    <item> Uzbekistan </item>
    <item> Vanuatu </item>
    <item> Venezuela </item>
    <item> Vietnam </item>
    <item> Yemen </item>
    <item> Djibouti </item>
    <item> Zambia </item>
    <item> Zimbabwe </item>
    </string-array>

=======
>>>>>>> 31a1cab604d58f252ef18384750f2ba6668dc196
</resources>
