<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr01.lab1ui.MailActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

<<<<<<< HEAD

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:context="co.edu.udea.compumovil.gr01.lab1ui.DatePickerFragment"
                android:layout_weight="3">
=======
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="co.edu.udea.compumovil.gr01.lab1ui.DatePickerFragment">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="1"
                android:editable="true"
                android:hint="@string/txtNombres"
                android:textSize="14dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/txtApellidos"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@+id/editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSexo"
                android:id="@+id/textView"
                android:layout_below="@+id/editText2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true">
                <RadioButton android:id="@+id/radio_hombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtHombre"
                    android:onClick="onRadioButtonClicked"
                    android:checked="false"
                    android:textSize="12dp" />
                <RadioButton android:id="@+id/radio_mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMujer"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="12dp" />
            </RadioGroup>
>>>>>>> 31a1cab604d58f252ef18384750f2ba6668dc196


<<<<<<< HEAD
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:layout_weight="1"
                    android:editable="true"
                    android:hint="@string/txtNombres"
                    android:textSize="14dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/txtApellidos"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_below="@+id/editText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSexo"
                    android:id="@+id/textView"
                    android:layout_below="@+id/editText2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/radiogroup">
                    <RadioButton android:id="@+id/radio_hombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtHombre"
                        android:onClick="onRadioButtonClicked"
                        android:checked="false"
                        android:textSize="12dp" />
                    <RadioButton android:id="@+id/radio_mujer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMujer"
                        android:onClick="onRadioButtonClicked"
                        android:textSize="12dp" />
                </RadioGroup>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_below="@id/radiogroup"
                 />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFavorito"
                    android:id="@+id/checkBox"
                    android:checked="false"
                    android:layout_below="@+id/spinner"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFecha"
                    android:layout="@+id/checkBox"
                    android:id="@+id/textView2"
                    android:layout_marginTop="47dp"
                    android:layout_alignTop="@+id/checkBox"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
=======
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultDate"
                android:id="@+id/dateDisplay"
                android:onClick="onClick"
                android:layout_below="@+id/textView2"
                android:textColor="#141313"
                android:textStyle="italic" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/dateDisplay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="41dp" />

>>>>>>> 31a1cab604d58f252ef18384750f2ba6668dc196

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultDate"
                    android:id="@+id/dateDisplay"
                    android:onClick="onClick"

                    android:textColor="#141313"
                    android:textStyle="italic"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/pais"
                    android:id="@+id/autoCompleteTextView"
                    android:layout_below="@+id/dateDisplay"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <ScrollView
            android:layout_width="184dp"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Datos:"
                android:id="@+id/textView3"
                android:gravity="left"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14dp"
                android:lines="50" />
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMostrar"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/radioButton2"
            android:layout_toEndOf="@+id/radioButton2"
            android:layout_marginBottom="50dp"
            android:layout_weight="0.99"
            android:onClick="mostrarInformacion" />

    </LinearLayout>

</LinearLayout>
